studygroup dto,mapper,service,test

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -78,7 +78,7 @@ mybatis:
     map-underscore-to-camel-case: true  
   mapper-locations: 
     - classpath:mybatis/mapper/**/*.xml
-  type-aliases-package: com.ezen.springmvc.domain.member.dto
+  type-aliases-package: com.vj.lets.domain.member.dto, com.vj.lets.domain.group.dto
 
 ---
       
