--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // 클래스 경로에 orai18n.jar 추가): KO16MSWIN949
+    implementation 'com.oracle.ojdbc:orai18n:19.3.0.0'
 }
 
 tasks.named('test') {
