--- a/src/main/resources/db-config.properties
+++ b/src/main/resources/db-config.properties
@@ -1,5 +1,6 @@
 #Database \uC5F0\uACB0 \uC815\uBCF4 \uC124\uC815
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
+spring.datasource.url=jdbc:oracle:thin:@localhost:1523/XE
+#spring.datasource.url=jdbc:oracle:thin:@192.168.20.2:1521:XE
 spring.datasource.username=lets
 spring.datasource.password=lets
